FIx for bug 149072.  the variable location already contains the value of the content-location header. Therefore it won't make sense to set base_ulr to the same value, that will cause MakeAbsoluteURL to return a null url and therefore make the feature that code was for to failed. R=varada, SR=bienvenu